--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,9 @@
-site_name: bemani.guide
-copyright: Made by a IIDX player.
+site_name: bemani guide
+copyright: Fumo.photos Team & a IIDX player
 site_description: Bemani Troubleshooting Guide
 site_author: IIDX Player
+repo_url: https://github.com/Vodes/bemani-guide
+repo_name: GitHub
 
 nav:
     - Home: index.md
