--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: bemani guide
-copyright: Fumo.photos Team & a IIDX player
+copyright: fumo.photos Team
 site_description: Bemani Troubleshooting Guide
 site_author: IIDX Player
 repo_url: https://github.com/Vodes/bemani-guide
