--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: bemani guide
 copyright: fumo.photos Team
 site_description: Bemani Troubleshooting Guide
-site_author: IIDX Player
+site_author: a IIDX Player
 
 nav:
     - Home: index.md
