Updated site name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: bemani guide
+site_name: Bemani Guide
 copyright: fumo.photos Team
 site_description: Bemani Troubleshooting Guide
 site_author: IIDX Player
