--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,8 @@ site_name: bemani guide
 copyright: fumo.photos Team
 site_description: Bemani Troubleshooting Guide
 site_author: IIDX Player
+repo_url: https://github.com/yxrei/bemani-guide
+repo_name: GitHub
 
 nav:
     - Home: index.md
