Add IIDX24, update hex edits page of all games
-add iidx24 setup/problems/hex edits

-changed the hex edits page on every
game to include mons bemanipatcher

-added bemani logo and old favicon

-placed more emphasis on 64-bit and 32-bit tools in iidx25-iidx27

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,10 @@ nav:
     - Home: index.md
     - Games:
         - 'IIDX':
+            - 'IIDX 24':
+                - 'First Time Setup': 'games/iidx24/setup.md'
+                - 'Common Problems/Tips': 'games/iidx24/problems.md'
+                - 'Hex Edits': 'games/iidx24/hexedits.md'
             - 'IIDX 25':
                 - 'First Time Setup': 'games/iidx25/setup.md'
                 - 'Common Problems/Tips': 'games/iidx25/problems.md'
@@ -97,6 +101,8 @@ nav:
 
 theme:
     name: material
+    logo: img/bemani.png
+    favicon: img/favicon.ico
     navigation_depth: 3
     palette:
         primary: deep purple
@@ -104,5 +110,6 @@ theme:
 
 markdown_extensions:
     - admonition
+    - pymdownx.details
 
 plugins: []
