Removed IIDX24 audio related issues
setup and problems, obsolete

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,9 @@ nav:
     - Home: index.md
     - Games:
         - 'IIDX':
+            - 'IIDX 9 [Btools]':
+                - 'First Time Setup': 'games/iidx9/setup.md'
+                - 'Common Problems/Tips': 'games/iidx9/problems.md'
             - 'IIDX 24':
                 - 'First Time Setup': 'games/iidx24/setup.md'
                 - 'Common Problems/Tips': 'games/iidx24/problems.md'
