Add IIDX9/general clean ups
Add IIDX 9 setup & faq

Clean up IIDX 24: SINOBUZ setup & faq

Removed contact section from the about page and removed some credits (obsolete)

Add Discord to Home page

Adjust Home page text to also include Bemanitools

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -114,5 +114,13 @@ theme:
 markdown_extensions:
     - admonition
     - pymdownx.details
+    - pymdownx.highlight:
+        anchor_linenums: true
+        line_spans: __span
+        pygments_lang_class: true
+    - pymdownx.inlinehilite
+    - pymdownx.snippets
+    - pymdownx.superfences
+    - pymdownx.keys
 
 plugins: []
