Add IIDX10 setup & faq / Clean up IIDX9

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,9 @@ nav:
             - 'IIDX 9':
                 - 'First Time Setup': 'games/iidx9/setup.md'
                 - 'Common Problems/Tips': 'games/iidx9/problems.md'
+            - 'IIDX 10':
+                - 'First Time Setup': 'games/iidx10/setup.md'
+                - 'Common Problems/Tips': 'games/iidx10/problems.md'
             - 'IIDX 24':
                 - 'First Time Setup': 'games/iidx24/setup.md'
                 - 'Common Problems/Tips': 'games/iidx24/problems.md'
