--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
             - 'IIDX 12 HAPPY SKY':
                 - 'First Time Setup': 'games/iidx12/setup.md'
                 - 'Common Problems/Tips': 'games/iidx12/problems.md'
-            - 'IIDX 13 DISTORTED':
+            - 'IIDX 13 DistorteD':
                 - 'First Time Setup': 'games/iidx13/setup.md'
                 - 'Common Problems/Tips': 'games/iidx13/problems.md'
             - 'IIDX 24 SINOBUZ':
