--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,9 @@ nav:
             - 'IIDX 13 DistorteD':
                 - 'First Time Setup': 'games/iidx13/setup.md'
                 - 'Common Problems/Tips': 'games/iidx13/problems.md'
+            - 'IIDX 14 GOLD':
+                - 'First Time Setup': 'games/iidx14/setup.md'
+                - 'Common Problems/Tips': 'games/iidx14/problems.md'
             - 'IIDX 24 SINOBUZ':
                 - 'First Time Setup': 'games/iidx24/setup.md'
                 - 'Common Problems/Tips': 'games/iidx24/problems.md'
