--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -119,7 +119,10 @@ nav:
                 - 'Common Problems/Tips': 'games/musecafinal/problems.md'
                 - 'Hex Edits': 'games/musecafinal/hexedits.md'
         - SEGA:
-            - 'Coming Soon': '#'
+            - 'CHUNITHM':
+                - 'SUN PLUS':
+                    - 'First Time Setup': 'games/chunithmsunplus/setup.md'
+                    - 'Common Problems/Tips': 'games/chunithmsunplus/problems.md'
     - Error Codes: errorcodes.md
     - Extras:
         - 'How to use Patcher Websites': 'extras/patchweb.md'
