--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: two-torial.xyz
 copyright: two-torial Team
-site_description: Bemani Troubleshooting Guide
-site_author: IIDX Player
+site_description: Arcade Games Troubleshooting Guide
+site_author: two-torial Team
 repo_url: https://github.com/yxrei/two-torial/
 repo_name: GitHub
 
