Add Game Patching and Spice2x Patching to nav

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,9 +126,11 @@ nav:
                     - 'Networks': 'games/chunithmsunplus/networks.md'
                     - 'Common Problems/Tips': 'games/chunithmsunplus/problems.md'
     - Error Codes: errorcodes.md
+    - Game Patching:
+        - 'Spice2x Patching': 'extras/patchsp2x.md'
+        - 'Website Patching': 'extras/patchweb.md'
+        - 'Manual Hex Editing': 'extras/hexguide.md'
     - Extras:
-        - 'How to use Patcher Websites': 'extras/patchweb.md'
-        - 'Beginner Guide to Hex Editing': 'extras/hexguide.md'
         - 'How to setup Asphyxia CORE': 'extras/asphyxia.md'
         - 'Notes on the Most Common ASCs and Vendors': 'extras/ascs.md'
         - 'Arcade Parts List and Documentation': 'extras/parts.md'
