Major SDVX6 revamp

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,9 +62,9 @@ nav:
                     - 'Common Problems/Tips': 'games/sdvx5/problems.md'
                     - 'Hex Edits': 'games/sdvx5/hexedits.md'
                 - 'SDVX EXCEED GEAR':
-                    - 'First Time Setup': 'games/sdvx6/setup.md'
-                    - 'Common Problems/Tips': 'games/sdvx6/problems.md'
-                    - 'Valkyrie Model': 'games/sdvx6/valk.md'
+                    - 'Game Setup': 'games/sdvx6/setup.md'
+                    - 'Extra Information': 'games/sdvx6/extras.md'
+                    - 'Troubleshooting': 'games/sdvx6/troubleshooting.md'
             - 'Pop&apos;n':
                 - 'Pop&apos;n Usaneko':
                     - 'First Time Setup': 'games/popnusaneko/setup.md'
